xml/src1/objects/Certification_in_Specialized_Ministry__c.object
<CustomObject>
    <description>A listing and details for each certification in specialized ministry that a contact has recevied.</description>
    <fields>
        <fullName>Application_Date__c</fullName>
        <description>The date contact applied for enrollment (not the date they were actually enrolled).</description>
        <inlineHelpText>The date contact applied for enrollment (not the date they were actually enrolled).</inlineHelpText>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approving_Conference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving Conference</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Education - Certifications</relationshipLabel>
        <relationshipName>Education_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>Select the appropriate area of certification</inlineHelpText>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Business Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camping/Retreat Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evangelism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ministry with the Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Older Adult Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spiritual Formation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Ministry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certifying_Body__c</fullName>
        <label>Certifying Body</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>American Association of Pastoral Counselors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Board of Diaconal Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division of Diaconal Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Board of Global Ministries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UM Association of Church Business Administrators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UM Association of Communicators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Certifications_in_Specialized_Ministry</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EC_Certification_Renewal_Status__c</fullName>
        <description>For updates from Certification Update</description>
        <label>Certification/Renewal Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <description>The date a contact was actually enrolled in the certification program.</description>
        <inlineHelpText>The date a contact was actually enrolled in the certification program.</inlineHelpText>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GBHEM_Approved_Date__c</fullName>
        <description>The date the contact was approved by GBHEM.</description>
        <inlineHelpText>The date the contact was approved by GBHEM.</inlineHelpText>
        <label>GBHEM Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Cert_ID__c</fullName>
        <label>GBHEM DataCenter Cert ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <inlineHelpText>Select the appropriate certification track.  Paraprofessional for contacts working in a specialized area without a Bachelors Degree, Professional for contacts with a Bachelors Degree</inlineHelpText>
        <label>Track</label>
        <picklist>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paraprofessional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Education - Certification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Cert-{00000000}</displayFormat>
        <label>Certification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education - Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AppDate_Before_GBHEMApproved_Date_Rule</fullName>
        <active>true</active>
        <description>If Application Date and GBHEMApproval Date are entered then Application Date must be prior to Approval Date.</description>
        <errorConditionFormula>(AND(NOT(ISBLANK(Application_Date__c)), NOT(ISBLANK
(GBHEM_Approved_Date__c  ))) &amp;&amp;
(GBHEM_Approved_Date__c  &lt; Application_Date__c))</errorConditionFormula>
        <errorDisplayField>GBHEM_Approved_Date__c</errorDisplayField>
        <errorMessage>If Application Date and GBHEMApproval Date are entered then Application Date must be prior to Approval Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GBHEMApprovedDate_VAlidation</fullName>
        <active>true</active>
        <description>GBHEM Approved date should not be a future Date</description>
        <errorConditionFormula>IF (NOT (ISNULL(  GBHEM_Approved_Date__c )),  GBHEM_Approved_Date__c  &gt; TODAY() ,FALSE)</errorConditionFormula>
        <errorDisplayField>GBHEM_Approved_Date__c</errorDisplayField>
        <errorMessage>GBHEM Approved Date should be Today or Before Today.</errorMessage>
    </validationRules>
</CustomObject>